compiler/testData/checkerWithErrorTypes/quick/regressions/kt328DuplicatedByKt329.jet
// http://youtrack.jetbrains.net/issue/KT-329

fun block(f : fun() : Unit) = f()

fun bar() = block{ <!UNRESOLVED_REFERENCE!>foo<!>() // <-- missing closing curly bracket
fun foo() = block{ <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!>bar()<!> }

